--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,4 +1,12 @@
 @tailwind base;
-  @tailwind components;
-  @tailwind utilities;
-  
+@tailwind components;
+@tailwind utilities;
+
+.hide-scrollbar {
+    scrollbar-width: none; /* For Firefox */
+    -ms-overflow-style: none; /* For Internet Explorer and Edge */
+}
+
+.hide-scrollbar::-webkit-scrollbar {
+    width: 0px; /* For Chrome, Safari, and Opera */
+}
